# cxx-ring-buffer

./: CMakeLists.txt  README.md  library.json
.github/workflows/: ci.yml
detect/: constexpr_destructors.cpp  cxxstd.cpp  features.cmake  standard.cmake
include/: ring-buffer-config.h  ring-buffer-iterator.h  ring-buffer.h
test/: CMakeLists.txt  constexpr-array-shim.h  iterator-ops.cpp  non-swappable-ring-buffer.cpp  push-iterate-const-constexpr.cpp  push-iterate-const.cpp  push-iterate-constexpr.cpp  push-iterate.cpp  simple.cpp  swap-ring-buffer-iterator.cpp  swap-ring-buffer.cpp
